--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
 h1 {color:rgb(16, 162, 199);
     text-align:center;}
-    table, th, td {
+    table, th {
         border: 1px solid;
+        margin-left: 510px;
+        margin-right: auto;
+        width: 50%;
       }
       img {
+          margin-left:830px;
         float: right;
       }
       div {
@@ -22,4 +26,9 @@ h1 {color:rgb(16, 162, 199);
       .div3 {
         background: green;
       }
+      td {clear: both; text-align:center;}
       
+      td {
+          width:10%;
+          border:1px solid;
+      }
